Updates for profile page.

--- a/templates/main/index.html
+++ b/templates/main/index.html
@@ -158,7 +158,7 @@
                 <div class="post-card">
                     <div class="post-card-header">
                         <div class="post-meta">
-                            <span class="author">{{ post.username or 'Anonymous' }}</span>
+                            <span class="author">{{ post.display_name or post.username or 'Anonymous' }}</span>
                             <span class="date">
                                 {% if post.created_at %}
                                     {% if post.created_at is string %}
