--- a/templates/base.html
+++ b/templates/base.html
@@ -128,6 +128,12 @@
                         <i class="bi bi-music-note-list"></i>
                         <span>My Posts</span>
                     </a>
+                    {% if current_user.is_admin %}
+                    <a href="{{ url_for('posts.manage_tags') }}" class="nav-item {% if request.endpoint == 'posts.manage_tags' %}active{% endif %}">
+                        <i class="bi bi-tags"></i>
+                        <span>Manage Tags</span>
+                    </a>
+                    {% endif %}
                     <a href="{{ url_for('main.discover') }}" class="nav-item {% if request.endpoint == 'main.discover' %}active{% endif %}">
                         <i class="bi bi-compass"></i>
                         <span>Discover</span>
