--- a/templates/posts/create.html
+++ b/templates/posts/create.html
@@ -49,6 +49,18 @@
                                 <option value="private">Private - Only you can access</option>
                             </select>
                         </div>
+                        
+                        <div class="form-group">
+                            <label for="tags" class="form-label">Tags</label>
+                            <select class="form-control" id="tags" name="tags" multiple>
+                                {% for tag in tags %}
+                                <option value="{{ tag.id }}">{{ tag.name }}</option>
+                                {% endfor %}
+                            </select>
+                            <div class="form-text">
+                                Select one or more tags to categorize your post (hold Ctrl/Cmd to select multiple)
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
